<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SMSAutoResponder</string>
    <string name="start_stop">Start/Stop Responses</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="action_exit">Exit</string>
    <string name="activity_prompt">Select your Current Activity:</string>
    <string name="response_prompt">Current Response:</string>
    <string name="action_settings">Settings</string>
    <string name="action_configuration">Configuration</string>
    <string name="response_driving">I\'m driving right now. I\'ll get back to you when I arrive at my destination.</string>
    <string name="response_cycling">I\'m enjoying my bike ride at the moment. I\'ll get back to you later.</string>
    <string name="response_hiking">I\'m out for a stroll. I\'ll talk to you later.</string>
    <string name="response_running">I\'m running and don\'t want to be disturbed. I\'ll catch you later.</string>
    <string name="response_donot_disturb">I\'m busy right now. I\'ll get back to you later.</string>
    
    
    <string name="default_activity">Running</string>
    <string name="saved_response_driving">drivingresponse</string>
    <string name="saved_response_biking">bikingresponse</string>
    <string name="saved_response_hiking">hikingresponse</string>
    <string name="saved_response_running">runningresponse</string>
    <string name="saved_response_donotdisturb">donotdisturbresponse</string>
    <string name="saved_activity_option">activityoption</string>
    <string name="saved_response_start">responsestart</string>
    <string name="saved_response_count">responsecount</string>
    
    <string name="reset_defaults">Reset Defaults</string>
    <string name="response_default">Response</string>    
    <string name="responses_sent_prompt">Responses Sent:</string>
    <string name="response_toast">Response Sent</string>
    
    <string name="acknowledgeexit_title">Exit</string>
    <string name="acknowledgeexit_msg">Are you sure you want to exit?</string>    
    <string name="dlg_yes">Yes</string>
    <string name="dlg_cancel">Cancel</string>
    
    
    <string name="notification_title">SMS Auto Responder</string>
    <string name="notifications_sent">@string/responses_sent_prompt</string>
    <string name="response_sentby"> -- Sent with SMSAutoResponder</string>
    
    <string name="activity_driving">Driving</string>
    <string name="activity_cycling">Cycling</string>
    <string name="activity_running">Running</string>
    <string name="activity_hiking">Walking/Hiking</string>
    <string name="activity_donotdisturb">Do Not Disturb</string>
    
    
    <string-array name="activity_array">
        <item>@string/activity_driving</item>
        <item>@string/activity_cycling</item>
        <item>@string/activity_running</item>
        <item>@string/activity_hiking</item>
        <item>@string/activity_donotdisturb</item>
    </string-array>

    <string name="title_activity_settings">Customize</string>

    <string name="response_hint">Enter a Response</string>
    <string name="settings_title">Settings</string>
    <string name="configuration_title">Configuration</string>
  	<string name="driving_title">Driving Response</string>
	<string name="biking_title">Cycling Response</string>
	<string name="running_title">Running Response</string>
	<string name="hiking_title">Hiking Response</string>
	<string name="donot_disturb_title">Do Not Disturb Response</string>
	<string name="preference_file_key">com.ridgway.smsautoresponder.PREFERENCE_FILE_KEY</string>

</resources>
