<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.ridgway.smsautoresponder.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin" >
	        
	        <TextView
	            android:id="@+id/textView1"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="16dp"
	            android:text="@string/start_stop" />
	    
		    <Button
		        android:id="@+id/btnStart"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="15dp"
		        android:onClick="startResponses"
		        android:text="@string/start" />
		
		    <Button
		        android:id="@+id/btnStop"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="16dp"
		        android:text="@string/stop"
		        android:onClick="stopResponses" />
		
	        <TextView
	            android:id="@+id/TextView01"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="31dp"
	            android:text="@string/activity_prompt" />
	        
		    <Spinner
		        android:id="@+id/spinner1"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="18dp"
		        android:entries="@array/activity_array"
		        android:prompt="@string/activity_prompt" />
	
	        <TextView
	            android:id="@+id/TextViewResponse"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="31dp"
	            android:text="@string/response_prompt" />
	        
	        <TextView
	            android:id="@+id/TextViewResponseDefault"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            android:text="@string/response_default" />
	
	    </LinearLayout>
	        	    	
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal"
	        android:paddingBottom="@dimen/activity_vertical_margin"
	        android:paddingLeft="@dimen/activity_horizontal_margin"
	        android:paddingRight="@dimen/activity_horizontal_margin"
	        android:paddingTop="@dimen/activity_vertical_margin" >
	    
	       <TextView
	            android:id="@+id/TextViewResponseCountTitle"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/responses_sent_prompt" />
	        
	        <TextView
	            android:id="@+id/TextViewResponseCountDisplay"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:text="@string/responses_sent_prompt" />
    	</LinearLayout>
	        	        
    </LinearLayout>
</ScrollView>
    
    <com.google.android.gms.ads.AdView android:id="@+id/adView"
	             android:layout_width="wrap_content"
	             android:layout_height="wrap_content"
	             ads:adUnitId="ca-app-pub-7604167799487973/7771808047"
	             ads:adSize="SMART_BANNER"/>

</LinearLayout>
