<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ridgway.smsautoresponder.SettingsActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/textViewDriveTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewTitle"
        android:layout_below="@+id/textViewTitle"
        android:layout_marginTop="10dp"
        android:text="@string/driving_title" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title" />

    <EditText
        android:id="@+id/editDrivingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDriveTitle"
        android:layout_below="@+id/textViewDriveTitle"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editHikingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewHikingTitle"
        android:layout_below="@+id/textViewHikingTitle"
        android:ems="10"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editRunningText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewRunningTitle"
        android:layout_below="@+id/textViewRunningTitle"
        android:ems="10"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editBikingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewBikingTitle"
        android:layout_below="@+id/textViewBikingTitle"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textViewHikingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editDrivingText"
        android:layout_below="@+id/editDrivingText"
        android:layout_marginTop="9dp"
        android:text="@string/hiking_title" />

    <TextView
        android:id="@+id/textViewRunningTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editHikingText"
        android:layout_below="@+id/editHikingText"
        android:layout_marginTop="12dp"
        android:text="@string/running_title" />

    <TextView
        android:id="@+id/textViewBikingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editRunningText"
        android:layout_below="@+id/editRunningText"
        android:layout_marginTop="12dp"
        android:text="@string/biking_title" />

</RelativeLayout>